Changed the post listing styles, added a created on date for posts and changed the styling for the footer to better match the theme. Fixed the issue with the bottom bar overlapping content

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,21 +17,26 @@
     color: #1abc9c !important;
 }
 
-.footer-padding {
-    padding-bottom: 60px;
-}
-
 .footer {
-    position: absolute;
-    text-align: center;
-    bottom: 0;
+    padding-bottom: 60px;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
     width: 100%;
     height: 60px;
-    background-color: #1abc9c;
+    background-color: #f8f8f8;
+    color: #777;
 }
 
 .footer p {
     margin-top: 25px;
     font-size: 12px;
-    color: #fff;
+}
+
+.blog-post-meta {
+    color: #999;
+}
+
+.mainContent {
+    margin-bottom: 60px;
 }
